feat: refactor to use CDI, remove upload
Former-commit-id: 0661c42a072eda9dc5b2ee3afa59054a8db9622e [formerly 8d0212d4bfe3d1a18db603ef0f78735e7870180b]
Former-commit-id: 6580336b479243c4619c66c2757b1ff8002adc98